--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
     padding: 20px;
 }
 
-.top-5 {
+h1.top-5 {
     padding-top:5px;
 }
+
+h6.top-5 {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
