--- a/template/index.html
+++ b/template/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicacion web en python</title>
-    <link href="/cs/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link href="/css/style.css" rel="stylesheet">
+    <script src="/js/index.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> <!--LIBRERIA DE BOOSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> <!--LIBRERIA DE BOOSTRAP-->
+    <!--<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script> LIBRERIA PARA ABRIR EXCEL EN JS-->
 </head>
 
 <body class="background-color-ivory">
@@ -16,28 +18,37 @@
         <h1 class="my-2 top-5">
             Prediccion de consumos de repuestos de pañol
         </h1>
-        <div class="mb-3">
-            <label for="formFileMultiple" class="form-label">Cargue ambos excels</label>
-            <input class="form-control" type="file" id="formFileMultiple" multiple>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <label>Control llegada pedidos</label>
-                <div class="input-group">
-                    <span class="input-group-text">inicio y fin de datos</span>
-                    <input type="text" aria-label="First name" class="form-control">
-                    <input type="text" aria-label="Last name" class="form-control">
+        <h6 class="top-5">
+            ¡Esta app solamente funciona si se cargan ambos excels!
+        </h6>
+        <form action="data_collect" method="post">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Control llegada pedidos</label>
+                        <input class="form-control" type="file" id="llegada_pedidos">
+                    </div>                  
+                    <div class="input-group">
+                        <span class="input-group-text">inicio y fin de datos</span>
+                        <input type="text" aria-label="First name" class="form-control">
+                        <input type="text" aria-label="Last name" class="form-control">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Control pañol P2</label>
+                        <input class="form-control" type="file" id="control_pañol">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-text">inicio y fin de datos</span>
+                        <input type="text" aria-label="First name" class="form-control">
+                        <input type="text" aria-label="Last name" class="form-control">
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <label>Control pañol P2</label>
-                <div class="input-group">
-                    <span class="input-group-text">inicio y fin de datos</span>
-                    <input type="text" aria-label="First name" class="form-control">
-                    <input type="text" aria-label="Last name" class="form-control">
-                </div>
-            </div>
-        </div>
+            <br/>
+            <input class="btn btn-secondary btn-sm" type="submit" value="Enviar"/>
+        </form>
     </div>
 </body>
 </html>
